# itmo-numberical_methods-labs

./: .gitignore  CMakeLists.txt  README.md
lab1-linear/: README.md
lab1-linear/src/: main.cpp
lab1-linear/src/gauss/: gauss_method.cpp  gauss_method.h
lab1-linear/src/input/: matrix_input.cpp
lab1-linear/src/matrix/: Matrix.cpp  MatrixRow.cpp  MatrixRow.h
lab1-linear/src/matrix/triangulation/: triangulation.cpp
lab1-linear/src/random/: matrix_random.h
lab2-nonlinear/: CMakeLists.txt  README.md  main.cpp
lab2-nonlinear/fixed_point/: fixed_point_solver.cpp  fixed_point_solver.h
lab2-nonlinear/newton/: newton_solver.cpp  newton_solver.h
lab2-nonlinear/util/: itermethods_reduce.cpp  itermethods_reduce.h  itermethods_scalar_reduce.cpp  itermethods_scalar_reduce.h
report/: report.tex
src/: main.cpp
src/gauss/: gauss_method.cpp  gauss_method.h
src/input/: matrix_input.cpp  matrix_input.h
src/matrix/: Matrix.cpp  Matrix.h  MatrixRow.cpp  MatrixRow.h
src/matrix/triangulation/: triangulation.h
src/random/: matrix_random.cpp
src/util/: tolerant_equals.h
